Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106393

Mac OS: Dot and Comma key combinations not working for russian layout

XMLWordPrintable

    • macOS
    • 705665957b (qt/qtbase/dev) 9ee1576b5a (qt/qtbase/6.4) 9ee1576b5a (qt/tqtc-qtbase/6.4) 705665957b (qt/tqtc-qtbase/dev), b2e5d5472 (dev), 3e3968d0a (6.4.2), da7283edd (6.4), 7e7bae35f (dev), 65b93df96 (6.4), 419cf9245 (dev), ee1e0d256 (6.5)

      I just found some time ago that in Telegram official application following key combinations not works:

      • Ctrl + Option + "Б" - should print `,` - it's a standard way to print it on Russian apple layout
      • Ctrl + Option + "Ю" - should pront `.` - it's a standard way to print it on Russian apple layout

      During the investigation, one of the telegram contributors found that it's not a telegram bug and that any Qt6 application seems to be affected.

      Also in that issue we also found that on Qt4 key combinations described above works fine.
      I used VLC as a Qt4 test application, but it seems that on MacOS VLC is not using Qt

      Initial telegram issue were discussed there - https://github.com/telegramdesktop/tdesktop/issues/24915

      P.S. I'm not sure that I've selected the right component

        For Gerrit Dashboard: QTBUG-106393
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            dm3ch Dmitry Chepurovskiy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: